...
    <KeyboardAvoidingScroll fullHeight>
      <SafeArea paddingTop={top}>
        <ScreenContainer>
          <FormContainer>
            <Header mt={40} noBack />

            <Title mv={36}>Login or Signup</Title>

            <Button
              variant="outlineDefault"
              loading={googleLoading}
              label="Continue with Google"
              icon="google"
...
