...
              </RewardsContainer>
            )}
            {!isGuest && (
              <MainIcons>
                <IconContainer
                  onPress={() => navigation.navigate(Routes.Notifications)}
                  testID={getTestId('notifications')}
                >
                  <Icon
                    name="ring"
                    size={22}
                    color="primary600"
                    badgeText={badgeText?.toString()}
                  />
                </IconContainer>

                <IconContainer
                  onPress={() => navigation.navigate(Routes.Settings)}
                  testID={getTestId('settings')}
                >
                  <Icon name="gear" size={22} color="primary600" />
                </IconContainer>
              </MainIcons>
            )}
          </TopHeaderContainer>
...
