appId: app.whiskeysocial
env:
  RECORD_FILE: 'assets/records/activity_domain/notifications'
---
- runFlow:
    when:
      true: ${RECORD_MODE == 'each'}
    commands:
      - startRecording: ${RECORD_FILE}
- tapOn:
    id: "notifications"
- assertVisible: "Notifications"
- tapOn:
    id: "navigation-back"

- runFlow:
    when:
      true: ${RECORD_MODE == 'each'}
    commands:
      - stopRecording